--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Sparta - TicTacToe</title>
   <link rel="stylesheet" href="style.css">
-  <script src = "script.js" async></script>
+  <!-- <script src = "script.js" async></script> -->
 </head>
 <body>
   <button id="reset">Reset Board</button>
@@ -13,7 +13,7 @@
   <table>
     <thead>
       <tr>
-        <td data-num="0"></td>
+        <td class="1" data-num="0"></td>
         <td data-num="1"></td>
         <td data-num="2"></td>
       </tr>
