--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
   <h2 class = "playerTurn">It is X's turn</h2>
   <table>
     <thead>
-      <tr class="1">
+      <tr class="row1">
         <td class="1" data-num="0"></td>
         <td data-num="1"></td>
         <td data-num="2"></td>
       </tr>
     </thead>
     <tbody>
-      <tr class="2">
+      <tr class="row2">
         <td data-num="3"></td>
         <td data-num="4"></td>
         <td data-num="5"></td>
       </tr>
     </tbody>
     <tfoot>
-      <tr class="3">
+      <tr class="row3">
         <td data-num="6"></td>
         <td data-num="7"></td>
         <td data-num="8"></td>
